<resources>
    <string name="app_name">UsersInfo</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="choose_password">Choose Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="sigup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="AutoFillHint" />
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="search_users">Search Users</string>
    <string name="Search">Search By:</string>
    <string name="firstnameRadio">First Name</string>
    <string name="lastnameRadio">Last Name</string>
    <string name="emailRadio">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reset">Reset</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
</resources>